# doornotify

./: .gitmodules  CMakeLists.txt  PKGBUILD  README.md  config.h  doornotify.c  notification.h  notification_linux.c  notification_windows.c
systemd/: doornotify.service
telegram/: doornotify-telegram.py
